2000-01-16  Sancho Lerena <slerena@artica.es>

    * bin/pandora_plugin, pandora_wmi, pandora_recon: Updated server, better
    performance, solved some minor fixes. Ported some fixes from development
    on recon.
    
    * Config.pm: Updated build number.
    
    * DB.pm: module_generic_proc manages better some string values coming
    from the function call (true, false).
    
2000-01-12  Sancho Lerena <slerena@artica.es>

	* DB.pm: Agent AccessUpdate  now uses unixtime (faster!).

	* pandora_server_upgrade: Updates permission on files.

2000-01-12  Sancho Lerena <slerena@artica.es>

	* DB.pm: Added generic functions db_delete, db_update and db_insert.

	* util/pandora_db.pl: Optimized maintance script. Solves some detected
	performance issues.

	* pandora_server_upgrade: Script to easy upgrade your running 
	Pandora FMS servers from code or Update Manager.

2008-12-27  Sancho Lerena <slerena@artica.es>

	* bin/pandora_recon: Added a timeout to pandora_getparent(). The call
	  to traceroute() would hang despite query_timeout. Merged from trunk
	  repository.         

2008-12-15  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Check for module existence before trying
	  to export data (merged from trunk).

2008-12-03  Sancho Lerena <slerena@artica.es>

        * mysql_plugin.sh: Updated MySQL plugin.  

2008-11-26  Sancho Lerena <slerena@artica.es>
	
	* util/plugin/mysql_plugin.sh: New Mysql plugin for Plugin server.


2008-11-11  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Added mta_user parameter who defines
	mail address used for alerts.

	* pandora_ctl: General control script to start/stop Pandora FMS
	daemons.

	* util/SLES10/*: Alternative start/stop daemons for SUSE and
	other systems that don't work fine with standard scripts.


2008-11-08  Sancho Lerena <slerena@gmail.com>

	* Config.pm: Fixed bug parsing config options with more
	than 2 digits. Thanks to Glen Eustace.

2008-11-07  Sancho Lerena <slerena@gmail.com>
