@@ -3,8 +3,7 @@
 # Pandora FMS WMI Server
 # http://www.pandorafms.com
 ##########################################################################
-# Copyright (c) 2008 Sancho Lerena, slerena@gmail.com
-#           (c) 2008 Artica Soluciones Tecnologicas S.L
+# Copyright (c) 2008-2009 Artica Soluciones Tecnologicas S.L
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -203,7 +202,7 @@ sub pandora_wmi_producer ($) {
 			# Query for normal server, not MASTER server
 			$query1 = "SELECT
 				tagente_modulo.id_agente_modulo,
-				tagente_modulo.flag
+				tagente_modulo.flag, UNIX_TIMESTAMP() - tagente_estado.current_interval - tagente_estado.last_execution_try  AS time_left 
 			FROM
 				tagente, tagente_modulo, tagente_estado
 			WHERE
@@ -224,11 +223,11 @@ sub pandora_wmi_producer ($) {
 					tagente_modulo.flag = 1
 			)				
 			ORDER BY
-					last_execution_try ASC  ";
+					tagente_modulo.flag DESC, time_left DESC, last_execution_try ASC ";
 		} else {
 			# Query for MASTER SERVER !
 			$query1 = "SELECT
-					DISTINCT(tagente_modulo.id_agente_modulo), tagente_modulo.flag
+					DISTINCT(tagente_modulo.id_agente_modulo), tagente_modulo.flag, UNIX_TIMESTAMP() - tagente_estado.current_interval - tagente_estado.last_execution_try  AS time_left 
 				FROM
 					tagente, tagente_modulo, tagente_estado, tserver
 				WHERE
@@ -244,7 +243,8 @@ sub pandora_wmi_producer ($) {
 					tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo
 				AND
 					((tagente_estado.last_execution_try + tagente_estado.current_interval) < UNIX_TIMESTAMP() OR tagente_modulo.flag = 1 )
-				ORDER BY last_execution_try ASC";
+				ORDER BY 
+					tagente_modulo.flag DESC, time_left DESC, last_execution_try ASC";
 		}
 		$exec_sql1 = $dbh->prepare($query1);
 		$exec_sql1 ->execute;
@@ -389,6 +389,10 @@ sub exec_wmi_module {
 	}
 	else { # Unknown module!, this IS a problem
 		logger ($pa_config, "WMI Server Problem with unknown module type '$tipo_modulo'", 0);
+		update_on_error ($pa_config, $id_am, $dbh);
+		undef $agent_module;
+		undef %part;
+		return 0;
 	}
 	# Update agent last contact
 	# Insert Pandora version as agent version
